--- a/package.json
+++ b/package.json
@@ -10,20 +10,31 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "laravel-echo": "^1.5.4",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-echo-laravel": "0.0.6",
+    "vue-pusher": "^1.0.0",
     "vue-router": "^3.0.7",
     "vue-simplemde": "^1.0.0",
+    "vue-socket.io": "^3.0.7",
+    "vue-socket.io-extended": "^3.2.2",
+    "vue-websocket": "^0.2.3",
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.20",
+    "@fortawesome/free-solid-svg-icons": "^5.10.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "font-awesome": "^4.7.0",
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-vuetify": "^0.6.1",
